--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,11 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-axios": "^2.0.4",
+    
+    "jquery": "^3.5.1",
+    "mdbreact": "^5.0.1",
+   
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
@@ -40,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.20.0"
   }
 }
