--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.1",
     "react-axios": "^2.0.4",
     "react-bootstrap": "^1.4.3",
+    "react-burger-menu": "^2.7.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
