--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
@@ -19,6 +22,7 @@
     "react-scripts": "4.0.1",
     "react-toastify": "^7.0.3",
     "reactstrap": "^8.9.0",
+    "sweetalert2": "^10.15.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
