--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-spinners": "^0.10.6",
     "react-toastify": "^7.0.3",
     "react-transition-group": "^4.4.1",
     "reactstrap": "^8.9.0",
