--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,13 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "bs-stepper": "^1.7.0",
     "jquery": "^3.5.1",
     "react": "^17.0.1",
     "react-axios": "^2.0.4",
