--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "4.0.1",
     "react-spinners": "^0.10.6",
     "react-tabs": "^3.2.0",
+    "react-timer-hook": "^2.0.7",
     "react-toastify": "^7.0.3",
     "react-transition-group": "^4.4.1",
     "reactstrap": "^8.9.0",
