--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^1.4.3",
     "react-burger-menu": "^2.7.1",
     "react-dom": "^17.0.1",
+    "react-elastic-carousel": "^0.11.2",
     "react-emoji": "^0.5.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
@@ -30,6 +31,7 @@
     "react-transition-group": "^4.4.1",
     "reactstrap": "^8.9.0",
     "socket.io-client": "^4.0.0",
+    "styled-components": "^5.2.1",
     "sweetalert2": "^10.15.5",
     "web-vitals": "^0.2.4"
   },
