--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-toastify": "^7.0.3",
     "react-transition-group": "^4.4.1",
     "reactstrap": "^8.9.0",
+    "save": "^2.4.0",
     "socket.io-client": "^4.0.0",
     "styled-components": "^5.2.1",
     "sweetalert2": "^10.15.5",
