--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
     "nodemon": "^2.0.7",
-    "uuid": "^8.3.2",
-    "ws": "^7.4.4"
+    "save": "^2.4.0",
+    "socket.io": "^4.0.0",
+    "uuid": "^8.3.2"
   }
 }
