--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.3",
@@ -16,13 +16,13 @@
     "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-axios": "^2.0.4",
-    "react-bootstrap": "^1.4.3",
+    "react-bootstrap": "^1.5.2",
     "react-burger-menu": "^2.7.1",
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.11.2",
     "react-emoji": "^0.5.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.1",
     "react-scroll-to-bottom": "^4.1.0",
     "react-spinners": "^0.10.6",
     "react-tabs": "^3.2.0",
