--- a/client/package.json
+++ b/client/package.json
@@ -14,15 +14,19 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bs-stepper": "^1.7.0",
+    "chart.js": "^2.9.4",
+    "chartjs": "^0.3.24",
     "jquery": "^3.5.1",
     "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-axios": "^2.0.4",
     "react-bootstrap": "^1.5.2",
     "react-burger-menu": "^2.7.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.11.2",
     "react-emoji": "^0.5.0",
+    "react-minimal-pie-chart": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "react-scroll-to-bottom": "^4.1.0",
