--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-axios": "^2.0.4",
     "react-bootstrap": "^1.5.2",
     "react-burger-menu": "^2.7.1",
+    "react-card-flip": "^1.1.0",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.11.2",
