--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-burger-menu": "^2.7.1",
     "react-card-flip": "^1.1.0",
     "react-chartjs-2": "^2.11.1",
+    "react-countdown": "^2.3.1",
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.11.2",
     "react-emoji": "^0.5.0",
